--- a/uts.html
+++ b/uts.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#home"><b>Home</b></a></li>
                 <li><a href="#proyek">Proyek</a></li>
                 <li><a href="#tentangSaya">Tentang Saya</a></li>
                 <li><a href="#kontak">Kontak</a></li>
@@ -24,14 +24,29 @@
             <div class="text-content">
                 <h3 style="margin-bottom: 0px; margin-top: 100px;">Hello, I want to be a</h3>
                 <h2>GRAPHIC DESIGNER</h2>
-                <p>Halo Perkenalkan, saya Miftakhul Anwar Rasyid. <br>
-                    Saya mempunyai keinginan menjadi seorang desain grafis.
+                <p>
+                    Halo Perkenalkan, saya Miftakhul Anwar Rasyid. <br>Saya mempunyai keinginan menjadi seorang desain grafis.
                 </p>
-                <button>
-                    <h3>About Me</h3>
+                <button class="buttonstyle">
+                    <b>Tentang Saya</b>
                 </button>
             </div>
         </div>
+    </div>
+
+    <div class="text">
+        <h2 class="jaka">Proyek</h2>
+        <div style="display: flex; align-items: center; justify-content: center;">
+            <ul>
+                <li><a href="#all"><b>All</b></a></li>
+                <li><a href="#socialMedia">Social Media</a></li>
+                <li><a href="#poster">Poster</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div>
+
     </div>
 </body>
 </html>
